--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: ruby
-before_install: 'cd spec/dummy && bundle install'
+before_install: bundle install --gemfile=dummy/Gemfile
 bundler_args: --without tool
 rvm:
-  - 1.9.2
   - 1.9.3
   - 2.0.0
   - 2.1.0
